fixed people spacing

--- a/apps/web/src/components/ScrollingTitle/ScrollingTitle.module.scss
+++ b/apps/web/src/components/ScrollingTitle/ScrollingTitle.module.scss
@@ -1,10 +1,10 @@
 :root {
   --time: 30s;
-  --margin-scale: 1.5;
-  --person-1-margin: 495px;
-  --person-2-margin: 465px;
-  --person-3-margin: 443px;
-  --person-4-margin: 359px;
+  --margin-scale: 3.2;
+  --person-1-margin: 9.8%;
+  --person-2-margin: 9.2%;
+  --person-3-margin: 8.7%;
+  --person-4-margin: 7.1%;
 }
 
 .scrollingTitle {
@@ -30,7 +30,7 @@
         align-self: flex-end;
         height: 100%;
         &:nth-child(1) {
-          margin-left: calc(103px * var(--margin-scale));
+          margin-left: calc(2% * var(--margin-scale));
           margin-right: calc(var(--person-1-margin) * var(--margin-scale));
         }
         &:nth-child(2) {
@@ -87,7 +87,7 @@
 
 @media screen and (max-width: 768px) {
   :root {
-    --margin-scale: 0.5;
+    --margin-scale: 1.2;
   }
 
   .scrollingTitle {
